2011-03-09  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * doc/sally.pod: minor fix

2011-02-21  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * CHANGES: final release

  * doc/sally.pod: minor typos fixed

  * configure.in, src/sally.c: new release approaching

  * doc/sally.pod: further extended man page

  * doc/sally.pod: extended man page

2011-01-17  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * src/Makefile.am, src/input/input_lines.c, src/sally.c: linux fixes

2011-01-11  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * src/sally.c: fixed bug in command line arguments

2011-01-06  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * src/sally.c: fixed minor bugs in config parsing

  * src/sally.c: additional check of config

  * .gitignore: filter for auto-generated header

  * doc/Makefile.am, doc/example.cfg, doc/sally.cfg, src/Makefile.am,
  src/fvec/embed.c, src/sally.c, src/sally.h, src/sally.h.in,
  tests/test_embed.c: added support for global configuration and command line
  options

2011-01-04  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * src/sally.c: updated help screen. longopts code will follow tommorrow.

  * doc/example.cfg, doc/sally.pod, src/sally.c, src/sconfig.c: changed names
  of format parameters

  * src/input/input_lines.c: removed minor memory leak

  * doc/example.cfg, src/input/input_fasta.c, src/input/input_lines.c: fixed
  regex matching

  * src/input/input_fasta.c, src/input/input_lines.c: fixed regex code

  * CHANGES, doc/example.cfg, src/input/input_fasta.c, src/input/input_lines.c,
  src/sconfig.c: added support for labels in text lines

2011-01-02  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * doc/sally.pod: started to update the man pagee

  * doc/Makefile.am, doc/example.cfg, src/sconfig.c: extended example
  configuration

2010-12-21  Konrad Rieck <konrad.rieck@tu-berlin.de>

  * contrib/sally_sparsematrix.r: important fix: added newline to eof

  * contrib/sally_sparsematrix.r: fixed wrong skip lines
