@@ -8,7 +8,8 @@
 
 # Input configuration
 input = {
-	# Input format. Supported types: "dir", "arc", "lines", "fasta"
+	# Input format.
+	# Supported types: "dir", "arc", "lines", "fasta"
 	input_format	= "lines";
 
         # Number of strings to process in each chunk
@@ -47,6 +48,7 @@ features = {
   
 # Configuration of output
 output = {
-	# Output format. Supported formats: "libsvm", "text", "matlab"
+	# Output format.
+	# Supported formats: "libsvm", "text", "matlab", "cluto"
 	output_format	= "libsvm";
 };
