@@ -1,5 +1,5 @@
 # Sally - A Tool for Embedding Strings in Vector Spaces
-# Copyright (C) 2010 Konrad Rieck (konrad@mlsec.org)
+# Copyright (C) 2010-2011 Konrad Rieck (konrad@mlsec.org)
 
 INCLUDES                = -I$(top_srcdir)/src \
 			  -I$(top_srcdir)/src/fvec
@@ -10,4 +10,4 @@ noinst_LTLIBRARIES	= liboutput.la
 
 liboutput_la_SOURCES	= output.c output.h output_libsvm.c output_libsvm.h \
                           output_text.c output_text.h output_matlab.c \
-                          output_matlab.h
+                          output_matlab.h output_cluto.c output_cluto.h
